# infopuck-device-idf5.3

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/display/: CMakeLists.txt
components/display/include/diagnostics/: diagnostics_.hpp
components/display/include/display/: display_.hpp  display_defs.hpp  display_enums.hpp
components/display/src/diagnostics/: diagnostics_.cpp
components/display/src/display/: display_.cpp  display_diagnostics.cpp  display_logging.cpp  display_nvs.cpp  display_run.cpp
components/i2c/: CMakeLists.txt
components/i2c/include/diagnostics/: diagnostics_.hpp
components/i2c/include/i2c/: i2c_.hpp  i2c_defs.hpp  i2c_enums.hpp
components/i2c/src/i2c/: i2c.cpp  i2c_.cpp  i2c_run.cpp
components/imu/: CMakeList.txt
components/imu/include/: imu_.hpp  imu_enums.hpp
components/imu/include/imu/: imu_.hpp  imu_defs.hpp  imu_enums.hpp
components/imu/include/logging/: logging_.hpp
components/imu/src/: imu_.cpp
components/imu/src/imu/: imu_.cpp  imu_run.cpp
components/imu/src/logging/: logging_.cpp
components/spi/: CMakeLists.txt
components/wifi/: CMakeLists.txt
main/: CMakeLists.txt  README.md  system_diagnostics.cpp  system_gpio_.cpp  system_gpio_test.cpp  system_run.cpp  system_timer.cpp
main/include/: system_.hpp  system_enums.hpp
main/include/logging/: logging_.hpp
main/include/system/: system_.hpp  system_enums.hpp
main/src/system/: main.cpp  system_.cpp  system_diagnostics.cpp  system_gpio_.cpp  system_gpio_test.cpp  system_nvs.cpp  system_run.cpp  system_timer.cpp  system_utilities.cpp
(+26 files in other folders)
